# sane

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  SUPPORT.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.agents/plugins/: marketplace.json
.githooks/: commit-msg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  distribution-channel-plan.yml  npm-publish.yml  release-artifacts.yml
apps/sane-tui/: README.md  package.json  tsup.config.ts  vitest.config.ts
apps/site/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
crates/sane-config/: Cargo.toml  README.md
crates/sane-core/: Cargo.toml  README.md
crates/sane-platform/: Cargo.toml  README.md
crates/sane-policy/: Cargo.toml  README.md
crates/sane-state/: Cargo.toml  README.md
crates/sane-tui/: Cargo.toml  README.md
crates/sane-tui/src/: main.rs
docs/: architecture.md  what-sane-does.md
docs/decisions/: 2026-04-19-sane-decision-log.md
docs/plans/: 2026-04-19-sane-runtime-foundation.md  2026-04-19-sane-strict-implementation-plan.md  2026-04-19-sane-v1-bootstrap.md  2026-04-22-sane-site-plan.md  2026-05-04-maintainability-architecture-reset.md  2026-05-04-sane-current-practices-automation.md
docs/research/: 2026-04-19-builtin-pack-capability-audit.md  2026-04-19-codex-surface-map.md  2026-04-19-mcp-default-tool-audit.md  2026-04-19-model-subagent-matrix.md  2026-04-19-packaging-distribution-audit.md  2026-04-19-privacy-telemetry-schema.md  2026-04-19-state-compaction-design.md  2026-04-25-agent-flow-evals.md  (+9 more)
scripts/: check-commit-msg.sh  install-hooks.sh
(+139 files in other folders)
