[workspace]
members = [
  "crates/sane-core",
  "crates/sane-config",
  "crates/sane-state",
  "crates/sane-platform",
  "crates/sane-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Bjorn"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.8"
