[package]
name = "sane-tui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
toml.workspace = true
sane-core = { path = "../sane-core" }
sane-config = { path = "../sane-config" }
sane-platform = { path = "../sane-platform" }
sane-state = { path = "../sane-state" }

[dev-dependencies]
tempfile.workspace = true
